--- a/style.css
+++ b/style.css
@@ -1,22 +1,37 @@
+
+@font-face {
+    font-family: OpenSans;
+    src: url(assets/Fonts/OpenSans-Italic-VariableFont_wdth\,wght.ttf);
+    src: url(assets/Fonts/OpenSans-VariableFont_wdth\,wght.ttf);
+}
+@font-face {
+    font-family: BebasNeue;
+    src: url(assets/Fonts/BebasNeue-Regular.ttf);
+    font-weight: bold;
+}
 body, html {
     height: 100%;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
 }
 * {
     box-sizing: border-box;
 }  
 
-.container {
-    display: grid;
-    height: 100%;
-    Width: 100%;
-}
 .background-image {
+    display: flex;
+    flex-direction: column;
     background-position: center;
-    background-repeat: no-repeat;
     background-size:cover;
+    background-repeat: no-repeat;
+    height:100vh;
 }
+
+#h1 {
+    font-family: 'BebasNeue';
+    font-weight: bold;
+    font-size: 80px;
+}
+
 .img1 {
     background-image: url("assets/main-bg.jpg");
 }
@@ -25,4 +40,10 @@ body, html {
 }
 .img3 {
     background-image: url("assets/features.jpg");
+}
+.img4 {
+    background-image: url("assets/requirements.png");
+}
+.img5 {
+    background-image: url("assets/top-score-bg.png");
 }
